# cpp_template

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  setup_gtest
include/: Foo.h
src/: CMakeLists.txt  Foo.cpp
tests/: TestFoo.cc
